--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-      />
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Atom Flix</title>
+    <title>React App</title>
   </head>
   <body>
-    <noscript>Por favor, ative o javascript no seu navegador para conseguir navegar nessa aplicação.</noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
